Fixing the layout issue

--- a/frontend/src/components/LoginPopup/LoginPopup.css
+++ b/frontend/src/components/LoginPopup/LoginPopup.css
@@ -1,10 +1,12 @@
 .login-popup {
-  position: absolute;
-  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: #000000;
+  background-color: rgba(0, 0, 0, 0.4); /* see-through */
   display: grid;
+  z-index: 999;
 }
 
 .login-popup-container {
